--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@prisma/client": "^5.18.0",
     "bcrypt": "^5.1.1",
     "class-validator": "^0.14.1",
+    "dotenv": "^16.4.5",
     "prisma": "^5.18.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
